minor change to correct overflow within the service config dialog
git-svn-id: https://svn.duraspace.org/duracloud/trunk@271 1005ed41-97cd-4a8f-848c-be5b5fe45bcb

--- a/duradmin/src/main/webapp/style/base.css
+++ b/duradmin/src/main/webapp/style/base.css
@@ -936,6 +936,11 @@ span.label,
 	background: url('../images/loading-bar-green.gif') no-repeat center center;
 }
 
+.ui-serviceconfig > div {
+	height: 415px;
+	overflow: auto;	
+}
+
 /*
 * hiding the jquery-ui dialog title bars globally.
 */
